syntax = "proto3";

option go_package = "github.com/Snowflake-Labs/sansshell/services/healthcheck";

package HealthCheck;

// The HealthCheck service definition.
service HealthCheck {
  // Ok merely signals if the endpoint is reachable.
  rpc Ok (Empty) returns (Empty) {}
}

// Empty is used as both the request and response message
message Empty {}
